--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <script src="fetch-canticles.js"></script>
         <link rel="stylesheet" href="style.css">
+        <title>Hereford Cathedral Canticles</title>
+        <link id="favIconLink" rel="shortcut icon" type="image/x-icon" href="https://www.herefordcathedral.org/Handlers/GetImage.ashx?IDMF=f03e96d5-03c0-4713-a0d7-8679652efb44&amp;w=80&amp;h=80">
+        <meta name="author" content="James Caroe">
     </head>
     <body>
         <table id="canticles-table">
